app01/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: app01
  labels:
    app: app01
    app.openshift.io/runtime: apache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app01
  template:
    metadata:
      labels:
        app: app01
        deployment: app01
    spec:
      volumes:
        - name: app-pvc
          persistentVolumeClaim:
            claimName: app01
      containers:
        - name: httpd
          image: 'quay.io/ocp-event-driven/app01:1.0.0'
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
          volumeMounts:
            - name: app-pvc
              mountPath: /tmp
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
