app01/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: demo
  labels:
    app: app01
spec:
  to:
    kind: Service
    name: app01
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
